--- a/OrcMobile/package.json
+++ b/OrcMobile/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --fix --ignore-path ./.gitignore --max-warnings=0",
+    "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
+    "lint": "npm run lint:format && npm run lint:fix ",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "eslint": "^8.53.0",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
@@ -22,15 +26,25 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
+    "pre-commit": "^1.2.2",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=16"
-  }
+  },
+  "jest": {
+    "preset": "react-native"
+  },
+  "pre-commit": "lint"
 }
