--- a/OrcMobile/package.json
+++ b/OrcMobile/package.json
@@ -15,7 +15,8 @@
     "eslint": "^8.53.0",
     "prettier": "^3.0.3",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,6 +27,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components-react-native": "^5.2.5",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "babel-jest": "^29.2.1",
@@ -46,5 +48,7 @@
   "jest": {
     "preset": "react-native"
   },
-  "pre-commit": "lint"
+  "pre-commit": "lint",
+  "main": "index.js",
+  "license": "MIT"
 }
